新增File,Email,随机数等组件

--- a/config/tcManager.properties
+++ b/config/tcManager.properties
@@ -1,1 +1,1 @@
-tcManager.uri="http://bizsyssvc.ct108.org:2047/TcManageCenter.asmx"
+tcManager.uri=http://bizsyssvc.ct108.org:2047/TcManageCenter.asmx
